--- a/client/index.html
+++ b/client/index.html
@@ -36,14 +36,25 @@
 <body>
     <canvas id = "const_canvas"></canvas>
     <canvas id = "int_canvas" style = "background: none"></canvas>
-
-    winWidth / 4 + 40, 320
+    
     <div id = "lobby_div" style ="display: none">
         <form id="new_room_form">
             <input type = "text"
-            style = "z-index:101; position:absolute; top: 320px"
+            style = "z-index:101; position:absolute; top: 300px; display: none"
             autocomplete="off"
             id = "roomName"/>
+
+            <select style = "z-index:101; position:absolute; top: 403px; display: none"
+                id = "gameSelect">
+
+                <option value="Big Two">Big Two</option>
+            </select
+            >
+
+            <input type = "text"
+            style = "z-index:101; position:absolute; top: 500px; display: none"
+            autocomplete="off"
+            id = "password"/>
         </form>
         <canvas id = "lobby_canvas" style = "background: none"></canvas>
     </div>
