--- a/client/index.html
+++ b/client/index.html
@@ -24,11 +24,6 @@
             left: 480px;
         }
 
-        .pass {
-            position: absolute;
-            top: calc(100vh - (10vw + 50px));
-            left: 30px;
-        }
 
     </style>
     <script src = "/socket.io/socket.io.js"></script>
@@ -38,24 +33,23 @@
     <canvas id = "int_canvas" style = "background: none"></canvas>
     
     <div id = "lobby_div" style ="display: none">
-        <form id="new_room_form">
-            <input type = "text"
+
+        <input type = "text"
             style = "z-index:101; position:absolute; top: 300px; display: none"
             autocomplete="off"
             id = "roomName"/>
 
-            <select style = "z-index:101; position:absolute; top: 403px; display: none"
-                id = "gameSelect">
+        <select style = "z-index:101; position:absolute; top: 403px; display: none"
+            id = "gameSelect">
 
-                <option value="Big Two">Big Two</option>
-            </select
-            >
+            <option value="Big Two">Big Two</option>
+        </select>
 
-            <input type = "text"
-            style = "z-index:101; position:absolute; top: 500px; display: none"
-            autocomplete="off"
-            id = "password"/>
-        </form>
+        <input type = "password"
+        style = "z-index:101; position:absolute; top: 500px; display: none"
+        autocomplete="off"
+        id = "password"/>
+
         <canvas id = "lobby_canvas" style = "background: none"></canvas>
     </div>
     
